# Sphinx-TUDelft-theme

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/sphinx_tudelft_theme/: __init__.py
src/sphinx_tudelft_theme/static/: sticky-logo.css  tudelft_style.css
src/tud_template/: __init__.py
