[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tud-template"
version = "0.0.1"
description = "A custom Sphinx extension to apply TU Delft styling to a TeachBook"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jakub Fręchowicz", email = "j.s.frechowicz@student.tudelft.nl" }
]
dependencies = [
    "sphinx"
]

requires-python = ">=3.10"
